--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>hello!<h1>
+<!--------------------- HTML STUFF -------------->
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>My First Page</title>
+</head>
+<body>
+  <h1>First Github Page<h1>
+</body>
+</html>
