--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>My First Page</title>
 </head>
 <body>
-  <h1>First Github Page<h1>
+  <h1>First Github Page</h1>
+    <p>It's time for a donut break</p>
 </body>
 </html>
