--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    I just got married.
-    <a href="unit01-krunchykookie/">Krunchy Kookie</a>
+   <li>Projects</li>
+    <ul><a href="unit01-krunchykookie/">Krunchy Kookie</a></ul>
 </body>
 </html>
