--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <li>Projects</li>
-    <ul><a href="unit01-krunchykookie/">Krunchy Kookie</a></ul>
+    <ul>Projects</ul>
+        <li><a href="unit01-krunchykookie/">Krunchy Kookie</a></li>
 </body>
 </html>
