--- a/ScienceMuseum/start_here/index.html
+++ b/ScienceMuseum/start_here/index.html
@@ -28,7 +28,10 @@
 </head>
 <body>
 <header>
-  
+  <div class="header">
+    <img src="img/logo.png" alt="logo" />
+    <h1>My website name</h1>
+  </div>
   <h1>Christmas Ranch</h1>
   <h2>For Wanabe Cowpeople</h2>
 </header>
@@ -43,7 +46,7 @@
 </nav>
 
 <main>
-    
+
     <h1>Events</h1>
     
     <figure>
