--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <ul>Projects</ul>
         <li><a href="unit01-krunchykookie/">Krunchy Kookie</a></li>
+        <li><a href="ScienceMuseum/index.html">Science Museum</a></li>
 </body>
 </html>
