--- a/ScienceMuseum/index.html
+++ b/ScienceMuseum/index.html
@@ -5,7 +5,9 @@
 <meta name="description" content="Fill Me In">
 <meta name="author" content="John Doe">
 <title>Events: Christmas Ranch</title>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&display=swap" rel="stylesheet">
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -19,8 +21,8 @@
 <body>
   <div id="headerWrapper">
 <header>
-  <h1>Christmas Ranch</h1>
-  <h2>For Wanabe Cowpeople</h2>
+  <h1>NASA Science Museum</h1>
+  <h2>Let's Live In Space</h2>
 </header>
 </div> 
 
@@ -37,13 +39,17 @@
 
 <div id="mainWrapper">
 <main>
-    
-    <h1>Events</h1>
-    
+   
     <figure class="myphoto">
-    <img  src="images/cows.jpg" alt="Herford Cows">
-        <figcaption>Herford Cows</figcaption>
+    <img  src="images/space.jfif" alt="Space">
+        <figcaption>NASA Science Museum</figcaption>
     </figure>
+    <h1>Location</h1>
+    <figure class="mypic">
+      <img  src="images/spaceship.jfif" alt="Space">
+          <figcaption>NASA Science Museum</figcaption>
+      </figure>
+
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel mauris pretium, tempus elit vel, condimentum ex. Aliquam tempus arcu vitae massa fermentum mattis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec vel sapien gravida, consequat tellus non, rhoncus est. Maecenas tincidunt placerat posuere. Quisque elementum consequat augue vel finibus. Vivamus mi nibh, mattis sit amet sapien ut, posuere malesuada leo. Phasellus facilisis enim lorem, sed ultricies diam maximus in. Maecenas fermentum eu mi vitae pretium.</p>
 
     <div class="news">
