--- a/ScienceMuseum/start_here/index.html
+++ b/ScienceMuseum/start_here/index.html
@@ -28,12 +28,13 @@
 </head>
 <body>
 <header>
+  
   <div class="header">
-    <img src="img/logo.png" alt="logo" />
-    <h1>My website name</h1>
+    <img src="images/science2.png" alt="Science Museum" /> 
+    
   </div>
-  <h1>Christmas Ranch</h1>
-  <h2>For Wanabe Cowpeople</h2>
+  <h1>NASA Science Museum</h1>
+  <h2>Let's live in space</h2>
 </header>
   
 <nav class="clearfix">
