--- a/ScienceMuseum/index.html
+++ b/ScienceMuseum/index.html
@@ -21,6 +21,9 @@
 <body>
   <div id="headerWrapper">
 <header>
+  <figure class="logo">
+    <img  src="images/science2.png" alt="Science" width='100px' height='50px'/>
+    </figure>
   <h1>NASA Science Museum</h1>
   <h2>Let's Live In Space</h2>
 </header>
