--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <ul>Projects</ul>
         <li><a href="unit01-krunchykookie/">Krunchy Kookie</a></li>
         <li><a href="ScienceMuseum/index.html">Science Museum</a></li>
+        <li><a href="Unit06_Band/startfile/index.html">Band</a></li>
 </body>
 </html>
