--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <li><a href="unit01-krunchykookie/">Krunchy Kookie</a></li>
         <li><a href="ScienceMuseum/index.html">Science Museum</a></li>
         <li><a href="Unit06_Band/startfile/index.html">Band</a></li>
+        <li><a href="08 News/index.html">News</a></li>
 </body>
+
 </html>
