--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li><a href="unit01-krunchykookie/">Krunchy Kookie</a></li>
         <li><a href="ScienceMuseum/index.html">Science Museum</a></li>
         <li><a href="Unit06_Band/startfile/index.html">Band</a></li>
-        <li><a hrefo="08News/index.html">08News</a></li>
+        <li><a href="08News/index.html">08News</a></li>
 </body>
 
 </html>
