Science Museum resubmit

--- a/ScienceMuseum/index.html
+++ b/ScienceMuseum/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="description" content="Fill Me In">
 <meta name="author" content="John Doe">
-<title>Events: Christmas Ranch</title>
+<title>Science Museum</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;700&display=swap" rel="stylesheet">
@@ -22,9 +22,9 @@
   <div id="headerWrapper">
 <header>
   <figure class="logo">
-    <img  src="images/science2.png" alt="Science" width='100px' height='50px'/>
+    <img  src="images/logo.png" alt="Science" width='100px' height='50px'/>
     </figure>
-  <h1>NASA Science Museum</h1>
+  <h1>AM Science Museum</h1>
   <h2>Let's Live In Space</h2>
 </header>
 </div> 
@@ -42,7 +42,7 @@
 
 <div id="mainWrapper">
 <main>
-   
+  
     <figure class="myphoto">
     <img  src="images/space.jfif" alt="Space">
         <figcaption>NASA Science Museum</figcaption>
