--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>Projects</ul>
         <li><a href="unit01-krunchykookie/">Krunchy Kookie</a></li>
         <li><a href="ScienceMuseum/index.html">Science Museum</a></li>
+        <li><a href="03-Fruit-Stand/index.html">Fruit Stand</a></li>
         <li><a href="Unit06_Band/startfile/index.html">Band</a></li>
         <li><a href="08 News/index.html">08 News</a></li>
 </body>
