fruit stand css

--- a/03-Fruit-Stand/index.html
+++ b/03-Fruit-Stand/index.html
@@ -11,15 +11,12 @@
 <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-
-
-
 <!-- STYLE SHEETS -->
 <link href="css/styles.css" rel="stylesheet">
      
 </head>
 <body>
-  <div id="headerWrapper">
+
 <header>
   <figure class="logo">
     <img  src="images/far.jpg" alt="Science" width='100px' height='70px'/>
@@ -27,10 +24,10 @@
   <h1>Farm Fresh Foods</h1>
   <h2>From Our Backyard To Your Kitchen</h2>
 </header>
-</div> 
 
-<div id="navWrapper">
-<nav class="clearfix">
+
+
+<nav>
 <ul>
   <li><a href="index.html">Locations</a></li>
   <li><a href="#">Standards</a></li>
@@ -38,7 +35,7 @@
   <li><a href="#">Partners</a></li>
 </ul>
 </nav>
-</div>
+
 <main>
   <h1>Produce</h1>
   <div class="parent">
