--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <ul>Projects</ul>
-        <li><a href="unit01-krunchykookie/">Krunchy Kookie</a></li>
+        <li><a href="unit01-krunchykookie/" target="_blank">Krunchy Kookie</a></li>
         <li><a href="ScienceMuseum/index.html">Science Museum</a></li>
         <li><a href="03-Fruit-Stand/index.html">Fruit Stand</a></li>
         <li><a href="Unit06_Band/startfile/index.html">Band</a></li>
