--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <ul>Projects</ul>
         <li><a href="unit01-krunchykookie/" target="_blank">Krunchy Kookie</a></li>
-        <li><a href="ScienceMuseum/index.html">Science Museum</a></li>
-        <li><a href="03-Fruit-Stand/index.html">Fruit Stand</a></li>
-        <li><a href="Unit06_Band/startfile/index.html">Band</a></li>
-        <li><a href="08 News/index.html">08 News</a></li>
+        <li><a href="ScienceMuseum/index.html" target="_blank">Science Museum</a></li>
+        <li><a href="03-Fruit-Stand/index.html" target="_blank">Fruit Stand</a></li>
+        <li><a href="Unit06_Band/startfile/index.html" target="_blank">Band</a></li>
+        <li><a href="08 News/index.html" target="_blank">08 News</a></li>
 </body>
 
 </html>
