--- a/08 News/index.html
+++ b/08 News/index.html
@@ -44,26 +44,34 @@
 
     <main>
         <div class="parent">
-            <figure><img class="one" src="images/mainstory.png" >
-            <figcaption>A Ukrainian Town Deals Russia One fo the War's Most Decisive Routs</figcaption>
-        </figure>
-        <figure><img class="two" src="images/walmart.png" width="300" height="200">
-            <figcaption>Walmart Aims to Hire 50,000 U.S. Workers by End of April</figcaption>
-        </figure>
-        <figure><img src="images/espn.png" width="300" height="200">
-            <figcaption>ESPN Signs Joe Buck</figcaption>
-        </figure>
-        <figure><img src="images/introvert.png" width="300" height="200">
-            <figcaption>Many Introverts Dread the Office Return. Some Also Can't Wait</figcaption></figure>
-        <figure><img src="images/911.png" width="300" height="200">
-            <figcaption>9/11 Tribute Museum in Lower Manhattan Preparing to Close Permanently</figcaption>
-        </figure>
-        <figure><img src="images/potato.png" width="300" height="200">
-            <figcaption>The World's Largest Potato Is Actually A Gourd</figcaption>
-        </figure>
-        <figure><img src="images/ncss.png" width="300" height="200">
-            <figcaption>The NCAA Torunament's Best Upset Picks Are Not Exactl Cinderellas</figcaption>
-        </figure>
+            <div class="one">
+            <img src="images/mainstory.png">
+            <span>A Ukrainian Town Deals Russia One fo the War's Most Decisive Routs</span>
+            </div>
+        <div class="sub">
+            <img src="images/walmart.png" >
+            <span>Walmart Aims to Hire 50,000 U.S. Workers by End of April</span>
+        </div>
+        <div class="sub">
+            <img class="sub" src="images/espn.png" >
+            <span>ESPN Signs Joe Buck</span>
+        </div>
+    <div class="sub">
+        <img class="sub" src="images/introvert.png" >
+            <span>Many Introverts Dread the Office Return. Some Also Can't Wait</span>
+        </div>
+        <div class="sub">
+            <img src="images/911.png" >
+            <span>9/11 Tribute Museum in Lower Manhattan Preparing to Close Permanently</span>
+        </div>
+        <div class="sub">
+            <img class="sub" src="images/potato.png">
+            <span>The World's Largest Potato Is Actually A Gourd</span>
+        </div>
+        <div class="sub">
+            <img class="sub" src="images/ncss.png" >
+            <span>The NCAA Torunament's Best Upset Picks Are Not Exactl Cinderellas</span>
+        </div>
             
             </div>
         
