--- a/04 News/index.html
+++ b/04 News/index.html
@@ -86,8 +86,8 @@
     
 <!-- FOOTER HERE -->   
     <footer>
-        &copy; 201x &bull; Paul Cheney &bull; 123-555-6789
+        &copy; 2022 &bull; Abby Murri &bull; 123-555-6789
     </footer>
-
+    <script src="js/script.js"></script><!--remember javascript for hamburger button!!-->
 </body>
 </html>
