--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <link href="projects.css" rel="stylesheet">
 </head>
 <body>
-    <ul>Projects</ul>
+    <header>Projects</header>
+    <nav>
+    <ul>
         <li><a href="unit01-krunchykookie/" target="_blank">Krunchy Kookie</a></li>
         <li><a href="ScienceMuseum/index.html" target="_blank">Science Museum</a></li>
         <li><a href="03-Fruit-Stand/index.html" target="_blank">Fruit Stand</a></li>
+        <li><a href="05 Restaurant/index.html" target="_blank">05 Restaurant</a></li>
         <li><a href="Unit06_Band/startfile/index.html" target="_blank">Band</a></li>
         <li><a href="08 News/index.html" target="_blank">08 News</a></li>
+    </ul>
+    </nav>
 </body>
 
 </html>
