--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="03-Fruit-Stand/index.html" target="_blank">Fruit Stand</a></li>
         <li><a href="05 Restaurant/index.html" target="_blank">05 Restaurant</a></li>
         <li><a href="Unit06_Band/startfile/index.html" target="_blank">Band</a></li>
+        <li><a href="07_lawFirm/index.html" target="_blank">07 Law Firm</a></li>
         <li><a href="08 News/index.html" target="_blank">08 News</a></li>
     </ul>
     </nav>
