--- a/05 Restaurant/index.html
+++ b/05 Restaurant/index.html
@@ -55,9 +55,9 @@
     <img  src="images/lucky.jpg" alt="">
     </figure>
     <h1>Our Founder</h1>
-    <figure class="mypic">
+    <figure class="mypics">
       <img  src="images/lab.jpg" alt="Lucky the lab">
-          <figcaption>Lucky The Lab</figcaption>
+          
       </figure>
 
 <p>The Labrador Retriever or Labrador is a British breed of retriever gun dog. It was developed in the United Kingdom from fishing dogs imported from the colony of Newfoundland (now a province of Canada), and was named after the Labrador region of that colony. It is among the most commonly kept dogs in several countries, particularly in the Western world.
@@ -66,7 +66,8 @@
   
   In the 1830s, the 10th Earl of Home and his nephews the 5th Duke of Buccleuch and Lord John Scott,[2] imported progenitors of the breed from Newfoundland to Europe for use as gundogs. Another early advocate of these Newfoundland fishing dogs was the 2nd Earl of Malmesbury, who bred them for their expertise in waterfowling.[2]
   
-  During the 1880s, the 3rd Earl of Malmesbury, the 6th Duke of Buccleuch, and the 12th Earl.</p>    
+  During the 1880s, the 3rd Earl of Malmesbury, the 6th Duke of Buccleuch, and the 12th Earl.
+  During the 1880s, the 3rd Earl of Malmesbury, the 6th Duke of Buccleuch, and the 12th Earl.  During the 1880s, the 3rd Earl of Malmesbury, the 6th Duke of Buccleuch, and the 12th Earl.</p>    
 </main>
 </div>
 
