--- a/07_lawFirm/index.html
+++ b/07_lawFirm/index.html
@@ -72,7 +72,7 @@
          
           <div class="column small-6 medium-3 large-2 card">
             <section>Isaac Murri</section>
-            <figure class="myphoto">
+            <figure class="myphoto" style="margin:.5rem 2vw;">
               <img src="images/isaac.png" />
             </figure>
             <a href="#">Learn More</a>
@@ -80,7 +80,7 @@
           <!--end of card-->
           <div class="column small-6 medium-3 large-2 card">
             <section>George Washington</section>
-            <figure>
+            <figure class="myphoto" style="margin:.5rem 2vw;">
               <img src="images/george.jpg" />
             </figure>
             <a href="#">Learn More</a>
@@ -88,7 +88,7 @@
           <!--end of card-->
           <div class="column small-6 medium-3 large-2 card">
             <section>John Adams</section>
-            <figure>
+            <figure class="myphoto" style="margin:.5rem 2vw;">
               <img src="images/john.jpg" />
             </figure>
             <a href="#">Learn More</a>
@@ -96,7 +96,7 @@
           <!--end of card-->
           <div class="column small-6 medium-3 large-2 card">
             <section>Abraham Lincoln</section>
-            <figure>
+            <figure class="myphoto" style="margin:.5rem 2vw;">
               <img src="images/abe.jpg" />
             </figure>
             <a href="#">Learn More</a>
@@ -131,7 +131,7 @@
         <div class="flexed card-blogs">
           
           <div class="small-6 medium-3 large-2 blog">
-            <figure class="myphoto">
+            <figure class="myphoto" style="margin:.5rem 2vw;">
               <img src="images/isaac.png" />
             </figure>
             <section id="par">
