--- a/05 Restaurant/index.html
+++ b/05 Restaurant/index.html
@@ -16,7 +16,12 @@
 
 <!-- STYLE SHEETS -->
 <link href="css/styles.css" rel="stylesheet">
-     
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+/>
+
+
 </head>
 <body>
   <div id="headerWrapper">
@@ -85,7 +90,7 @@
 &copy; Abby Murri 2022
 </footer>
 </div>
-
+<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script> 
 <script src="js/script.js"></script><!--remember javascript for hamburger button!!-->
 </body>
 </html>
