--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <header>Projects</header>
     <nav>
     <ul>
-        <li><a href="unit01-krunchykookie/" target="_blank">Krunchy Kookie</a></li>
-        <li><a href="ScienceMuseum/index.html" target="_blank">Science Museum</a></li>
-        <li><a href="03-Fruit-Stand/index.html" target="_blank">Fruit Stand</a></li>
+        <li><a href="unit01-krunchykookie/" target="_blank">01 Krunchy Kookie</a></li>
+        <li><a href="ScienceMuseum/index.html" target="_blank">02 Science Museum</a></li>
+        <li><a href="03-Fruit-Stand/index.html" target="_blank">03 Fruit Stand</a></li>
         <li><a href="05 Restaurant/index.html" target="_blank">05 Restaurant</a></li>
-        <li><a href="Unit06_Band/startfile/index.html" target="_blank">Band</a></li>
+        <li><a href="Unit06_Band/startfile/index.html" target="_blank">06 Band</a></li>
         <li><a href="07_lawFirm/index.html" target="_blank">07 Law Firm</a></li>
         <li><a href="08 News/index.html" target="_blank">08 News</a></li>
+        <li><a href="09_Philly/index.html" target="_blank">09 Philadelphia City</a></li>
     </ul>
     </nav>
 </body>
