--- a/04 News/index.html
+++ b/04 News/index.html
@@ -60,20 +60,20 @@
 
     <!-- CONTENT HERE -->
     <main>
-      <div id="blogger">
-        <div class="flexed card-blogs">
-          <div class="small-6 medium-4 large-2 blog">
-            <section>Valley Forge</section>
-            <i class="fa-solid fa-campground fa-5x"></i>
+      <div class="blogger">
+        
+          <div class="small-6 medium-4 large-2 blog" style="margin:.5rem 2vw;">
+            <section>Valley Forge Menu</section>
+            <img src = "images/menu.svg" alt="menu">
             <p>
               Valley forge is one of the most popular Revolutionary War Sites.
             </p>
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class="small-6 medium-4 large-2 blog">
-            <section>Reservations</section>
-            <i class="fa-solid fa-house fa-5x"></i>
+          <div class="small-6 medium-4 large-2 blog" style="margin:.5rem 2vw;">
+            <section>Search for Treasure</section>
+            <img src = "images/x.svg" alt="menu">
             <p>
               Enthusiastically negotiate proactive synergy whereas wireless
               value.
@@ -82,8 +82,8 @@
           </div>
           <!--end of card-->
           <div class="small-12 medium-6 large-4 blog" style="margin:.5rem 2vw;">
-            <section>Fees</section>
-            <i class="fa-solid fa-money-bill-1 fa-5x"></i>
+            <section>Download a Map</section>
+            <img src = "images/download.svg" alt="menu">
             <p>
               Enthusiastically negotiate proactive synergy whereas wireless
               value.
@@ -91,9 +91,9 @@
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class="small-6 medium-4 large-2 blog">
-            <section>Activities</section>
-            <i class="fa-solid fa-people-group fa-5x"></i>
+          <div class="small-6 medium-4 large-2 blog" style="margin:.5rem 2vw;">
+            <section>Mysteries</section>
+            <img src = "images/lock.svg" alt="menu">
             <p>
               Enthusiastically negotiate proactive synergy whereas wireless
               value.
@@ -101,9 +101,9 @@
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class="small-6 medium-4 large-2 blog">
+          <div class="small-6 medium-4 large-2 blog" style="margin:.5rem 2vw;">
             <section>Meet New People</section>
-            <i class="fa-solid fa-handshake fa-5x"></i>
+            <img src = "images/person.svg" alt="menu">
             <p>
               Enthusiastically negotiate proactive synergy whereas wireless
               value.
@@ -111,37 +111,36 @@
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class="small-6 medium-4 large-2 blog">
-            <section>Attractions</section>
-            <i class="fa-solid fa-person-sledding fa-5x"></i>
+          <div class="small-6 medium-4 large-2 blog" style="margin:.5rem 2vw;">
+            <section>Contact Us</section>
+            <img src = "images/email.svg" alt="menu">
             <p>
               Enthusiastically negotiate proactive synergy whereas wireless
-              value.
+              value.Enthusiastically nego
             </p>
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class="small-6 medium-4 large-2 blog">
+          <div class="small-6 medium-4 large-2 blog" style="margin:.5rem 2vw;">
             <section>History</section>
-            <i class="fa-solid fa-monument fa-5x"></i>
+            <img src = "images/arrow.svg" alt="menu">
             <p>
               Enthusiastically negotiate proactive synergy whereas wireless
               value.
-            </p>
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class="small-6 medium-4 large-2 blog">
+          <div class="small-6 medium-4 large-2 blog" style="margin:.5rem 2vw;">
             <section>Famous People</section>
-            <i class="fa-solid fa-person-cane fa-5x"></i>
+            <img src = "images/person.svg" alt="menu">
             <p>
               Enthusiastically negotiate proactive synergy whereas wireless
-              value.
+              value. 
             </p>
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-        </div>
+        
       </div>
       <!--end of card deck-->
     </main>
