--- a/09_Philly/index.html
+++ b/09_Philly/index.html
@@ -165,9 +165,9 @@
 
       <!--Cards-->
       <h1>Plan Your Visit</h1>
-      <div class="flexed">
-        <div class="cards">
-          <div class="column small-6 medium-3 place">
+     
+        <div class="parent">
+          <div class=" place">
             <a
               href="https://www.nps.gov/inde/learn/historyculture/stories-libertybell.htm"
             >
@@ -175,7 +175,7 @@
               <h3>Liberty Bell</h3>
             </a>
           </div>
-          <div class="column small-6 medium-3 place">
+          <div class=" place">
             <a
               href="https://www.nps.gov/inde/learn/historyculture/stories-libertybell.htm"
             >
@@ -183,7 +183,7 @@
               <h3>Independence Hall</h3>
             </a>
           </div>
-          <div class="column small-6 medium-3 place">
+          <div class=" place">
             <a
               href="https://www.nps.gov/inde/learn/historyculture/stories-libertybell.htm"
             >
@@ -191,7 +191,7 @@
               <h3>Philadelphia Museum of Art</h3>
             </a>
           </div>
-          <div class="column small-6 medium-3 place">
+          <div class=" place">
             <a
               href="https://www.nps.gov/inde/learn/historyculture/stories-libertybell.htm"
             >
@@ -201,7 +201,7 @@
           </div>
         </div>
         <!--end cards-->
-      </div>
+     
     </main>
 
     <footer>
