--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="07_lawFirm/index.html" target="_blank">07 Law Firm</a></li>
         <li><a href="08 News/index.html" target="_blank">08 News</a></li>
         <li><a href="09_Philly/index.html" target="_blank">09 Philadelphia City</a></li>
+        <li><a href="15 Job/index.html" target="_blank">15 Job Practice</a></li>
     </ul>
     </nav>
 </body>
