--- a/04 News/index.html
+++ b/04 News/index.html
@@ -62,7 +62,7 @@
     <main>
       <div class="blogger">
         
-          <div class="blog blog1" style="margin:.5rem 2vw;">
+          <div class="blog blog1" >
             <section>Valley Forge Menu</section>
             <img src = "images/menu.svg" alt="menu">
             <p>
@@ -71,7 +71,7 @@
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class=" blog blog2" style="margin:.5rem 2vw;">
+          <div class=" blog blog2" >
             <section>Search for Treasure</section>
             <img src = "images/x.svg" alt="menu">
             <p>
@@ -81,7 +81,7 @@
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class=" blog blog3" style="margin:.5rem 2vw;">
+          <div class=" blog blog3">
             <section>Download a Map</section>
             <img src = "images/download.svg" alt="menu">
             <p>
@@ -91,7 +91,7 @@
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class=" blog blog4" style="margin:.5rem 2vw;">
+          <div class=" blog blog4" >
             <section>Mysteries</section>
             <img src = "images/lock.svg" alt="menu">
             <p>
@@ -101,7 +101,7 @@
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class=" blog blog5" style="margin:.5rem 2vw;">
+          <div class=" blog blog5">
             <section>Meet New People</section>
             <img src = "images/person.svg" alt="menu">
             <p>
@@ -111,7 +111,7 @@
             <a href="#">Learn More</a>
           </div>
           <!--end of card-->
-          <div class=" blog blog6" style="margin:.5rem 2vw;">
+          <div class=" blog blog6">
             <section>Contact Us</section>
             <img src = "images/email.svg" alt="menu">
             <p>
