--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li><a href="09_Philly/index.html" target="_blank">09 Philadelphia City</a></li>
         <li><a href="10_Swag/index.html" target="_blank">10 Swag Shop</a></li>
         <li><a href="11_Tech/index.html" target="_blank">11 TechWatch</a></li>
+        <li><a href="12_Hotel/index.html" target="_blank">12 Hotel</a></li>
+        <li><a href="13_Weather/index.html" target="_blank">13 Weather</a></li>
+        <li><a href="13_Weather copy/index.html" target="_blank">13 Weather copy</a></li>
         <li><a href="15 Job/index.html" target="_blank">15 Job Practice</a></li>
     </ul>
     </nav>
