--- a/12 HOTEL/index.html
+++ b/12 HOTEL/index.html
@@ -6,14 +6,20 @@
     <meta name="author" content="John Doe" />
 
     <!-- This start file was build by Paul Cheney  -->
-    <title>HTML5 Start Site by Paul Cheney</title>
+    <title>Hotel</title>
 
     <!-- TELLS PHONES NOT TO LIE ABOUT THEIR WIDTH & stops the font from enlarging when a phone is turned sideways-->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-
+ <!-- Google Font -->
+ <link rel="preconnect" href="https://fonts.googleapis.com" />
+ <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+ <link
+   href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;500&display=swap"
+   rel="stylesheet"
+ />
     <!-- STYLE SHEETS -->
     <link href="css/styles.css" rel="stylesheet" />
     <script
@@ -50,8 +56,7 @@
     <main>
       <h1>Locations</h1>
       <div id="myCards">
-        <ion-icon name="car-outline"></ion-icon>
-        <ion-icon name="call-outline"></ion-icon>
+    
       </div>
     </main>
 
