--- a/13_Weather copy 2/index.html
+++ b/13_Weather copy 2/index.html
@@ -27,20 +27,22 @@
     <h1>Weather Information for Philadelphia</h1>
     <div id="forecast">
       <script>
-        /*let gotPosition = function (pos) {
+        let gotPosition = function (pos) {
           let lat = pos.coords.latitude;
           let long = pos.coords.longitude;
           console.log(lat);
           getForecast(lat, long);
-        };*/
+        };
 
-        //let getForecast = function(lat, long) { let url =
-          const apiURL =
-          "//api.openweathermap.org/data/2.5/forecast?zip=19019,us&appid=583f4d9c72b13f531cf6a2b4e843ab69";
-        //};
-        Fetch(apiURL)
-        
-       
+        let getForecast = function(lat, long) {
+          let url =
+            "//api.openweathermap.org/data/2.5/onecall?lat=" +
+            lat +
+            "&lon=" +
+            long +
+            "&exclude=current,minutely,hourly&appid=583f4d9c72b13f531cf6a2b4e843ab69";
+          getWeatherText(url);
+        };
         async function getWeatherText(url) {
           let weatherObject = await fetch(url);
           let weatherText = await weatherObject.text();
@@ -125,7 +127,7 @@
           return (weekday[dayNum]);
         }
 
-        //navigator.geolocation.getCurrentPosition(gotPosition);
+        navigator.geolocation.getCurrentPosition(gotPosition);
       </script>
     </div>
   </body>
