--- a/_FINAL/form.html
+++ b/_FINAL/form.html
@@ -30,9 +30,14 @@
 <body>
 <!-- HEADER HERE -->
 	<header>
+        <figure class="logo">
+            <img  src="images/logo0-assets/logo1.png" alt="logo"
+            srcset="images/logo0-assets/logo1.png 1x, images/logo0-assets/logo2.png 2x,
+            images/logo0-assets/logo3.png 3x">
+            </figure>
+            
     <div class="header">
-    <img src="images/logo.svg">
- <h1>Swag Shop</h1>
+ <h1>Holly's Food Favorites:)</h1>
 </div>
 
     </header>
@@ -47,10 +52,10 @@
             <span class="line bottom"></span>
         </button>
         <ul id="primaryNav">
-            <li><a href="#">Home</a></li>
-            <li class="active"><a href="#">Products</a></li>
-            <li><a href="#">Location</a></li>
-            <li><a href="#">Contact</a></li>    
+            <li class="active"><a href="index.html">Home</a></li>
+            <li ><a href="form.html">Sign Up</a></li>
+            <li><a href="recipes.html">Recipes</a></li>
+            <li><a href="contact.html">Contact</a></li>    
         </ul>
     </nav>
 </div> 
