--- a/13_Weather copy/index.html
+++ b/13_Weather copy/index.html
@@ -24,9 +24,10 @@
   </head>
   <body>
     <!-- HEADER HERE -->
-    <h1>Weather Information for Philadelphia</h1>
+    <h1>Weather Information for <span id="place">city</span></h1>
     <div id="forecast">
-      <script>
+      
+      <!--<script>
         /*let gotPosition = function (pos) {
           let lat = pos.coords.latitude;
           let long = pos.coords.longitude;
@@ -126,7 +127,9 @@
           return (weekday[dayNum]);
         }
         //navigator.geolocation.getCurrentPosition(gotPosition);
-      </script>
+      </script>-->
     </div>
+    <!--<script src="js/scripts.js"></script>-->
+    <script src="js/scripts copy.js"></script>
   </body>
 </html>
