--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <li><a href="11_Tech/index.html" target="_blank">11 TechWatch</a></li>
         <li><a href="12 HOTEL/index.html" target="_blank">12 Hotel</a></li>
         <!--<li><a href="13_Weather/index.html" target="_blank">13 Weather</a></li>-->
-        <li><a href="13_Weather copy/index.html" target="_blank">13 Weather copy</a></li>
+        <!--<li><a href="13_Weather copy/index.html" target="_blank">13 Weather copy</a></li>-->
         <li><a href="15 Job/index.html" target="_blank">15 Job Practice</a></li>
+        <li><a href="_FINAL/index.html" target="_blank">Final Project</a></li>
     </ul>
     </nav>
 </body>
