--- a/_FINAL/thanks.html
+++ b/_FINAL/thanks.html
@@ -54,7 +54,70 @@
         <h1>Holly's Food Favs</h1>
         <p>Thank you for your order. You will receive a confirmation email shortly.</p>
         <a href="index.html">Click Here To Go Back To Home</a>
-        
+           <!--Slider main container-->
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <picture>
+              <source
+                srcset="images/nibblerssmall.jpg"
+                media="(max-width:28.12rem)"
+              />
+              <source
+                srcset="images/nibblers.jpg"
+                media="(min-width:28.12rem)"
+              />
+              <img src="images/nibblers.jpg" alt="slide" />
+            </picture>
+            <p>
+              All the flavor of genuine, aged sourdough in a crunchy, bite-size
+              shape. They’re a perfect snack at home or on-the-go, and as
+              complement to soups and salads. You’ll love this sourdough snack,
+              a flavorful Fat Free treat.
+            </p>
+          </div>
+          <div class="swiper-slide">
+            <picture>
+              <source
+                srcset="images/licoricesmall.jpg"
+                media="(max-width:28.12rem)"
+              />
+              <source
+                srcset="images/licorice.jpg"
+                media="(min-width:28.12rem)"
+              />
+              <img src="images/licorice.jpg" alt="slide" />
+            </picture>
+            <p>
+              Every licorice lover knows that Panda Licorice is a classic Always
+              right from the first bite, it’s exactly how licorice should be –
+              soft, mouth-watering and deliciously tasty. We’re proud to say
+              that we make it from only a few carefully selected natural
+              ingredients. Our licorice candy has been famous for its flavor
+              since 1927. We’ve stayed true to our roots, so you’ll rediscover
+              the licorice candy taste you know and love, every time.
+            </p>
+          </div>
+          <div class="swiper-slide">
+            <picture>
+              <source
+                srcset="images/saladsmall.jpg"
+                media="(max-width:28.12rem)"
+              />
+              <source srcset="images/salad.jpg" media="(min-width:28.12rem)" />
+              <img src="images/salad.jpg" alt="slide" />
+            </picture>
+            <p>
+              Dive into this life changing bowl of deliciousness. A fresh,
+              hot-off-the-comal tortilla, black or pinto beans, cilantro lime
+              rice and chicken are all nestled in a bowl of freshly chopped
+              romaine, pico de gallo, guacamole and topped with our creamy
+              tomatillo dressing or cilantro lime vinaigrette.
+            </p>
+          </div>
+        </div>
+      </div>
+
     </main>
     
 <!-- FOOTER HERE -->   
