--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>Projects</header>
     <nav>
-    <ul>
+    <ul><li><a href="_FINAL/index.html" target="_blank">Final Project!</a></li>
         <li><a href="unit01-krunchykookie/" target="_blank">01 Krunchy Kookie</a></li>
         <li><a href="ScienceMuseum/index.html" target="_blank">02 Science Museum</a></li>
         <li><a href="03-Fruit-Stand/index.html" target="_blank">03 Fruit Stand</a></li>
@@ -27,7 +27,7 @@
         <!--<li><a href="13_Weather/index.html" target="_blank">13 Weather</a></li>-->
         <!--<li><a href="13_Weather copy/index.html" target="_blank">13 Weather copy</a></li>-->
         <li><a href="15 Job/index.html" target="_blank">15 Job Practice</a></li>
-        <li><a href="_FINAL/index.html" target="_blank">Final Project!</a></li>
+        
     </ul>
     </nav>
 </body>
