--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!--<li><a href="13_Weather/index.html" target="_blank">13 Weather</a></li>-->
         <!--<li><a href="13_Weather copy/index.html" target="_blank">13 Weather copy</a></li>-->
         <li><a href="15 Job/index.html" target="_blank">15 Job Practice</a></li>
-        <li><a href="_FINAL - Copy/" target="_blank">Final</a></li>
+        <li><a href="_FINAL - Copy/index.html" target="_blank">Final</a></li>
         
     </ul>
     </nav>
